tests/invalid/state_vars_test1.err_exp
state_vars_test1.m:018: In clause for `p(in, out)':
state_vars_test1.m:018:   in call to function `int.+'/2:
state_vars_test1.m:018:   mode error: arguments `STATE_VARIABLE_X_0, V_7' and
state_vars_test1.m:018:   the return value `STATE_VARIABLE_X' have the
state_vars_test1.m:018:   following insts:
state_vars_test1.m:018:     ground,
state_vars_test1.m:018:     free,
state_vars_test1.m:018:     free
state_vars_test1.m:018:   which does not match any of the modes for function
state_vars_test1.m:018:   `int.+'/2.
For more information, recompile with `-E'.
